<resources>

	<string name="app_name">sapientia</string>

	<string name="login">登 录</string>

	<string name="sign">注 册</string>

	<string name="login_user">用户名/手机号/邮箱</string>
	
	<string name="password">密码</string>
	
	<string name="flesh">新用户</string>
	
	<string name="question">问题？</string>
	
	<string name="bookuser">用 户 名 ：</string>
	
	<string name="pwd">密      码：</string>
	
	<string name="conformpwd">密码确认：</string>
	
	<string name="phone">手机号码：</string>
	
	<string name="mail">邮箱地址：</string>
	
	<string name="autologin">自动登录</string>
	
	<string name="autoRem">记住用户</string>
	
	<string name="book">书库</string>
	
	<string name="hook">书圈</string>
	
	<string name="search">搜索</string>
</resources>
